# attendIQ

./: .gitignore  attendiq_db_docs.docx  index.html  messages.html  scores.html  students.html  upload.html
.claude/: settings.json
api/: .env  .env.example  db.py  main.py  pyproject.toml
api/routers/: alerts.py  classes.py  messages.py  overview.py  scores.py  students.py  upload.py
