[tool.poetry]
package-mode = false

[project]
name = "attendiq-dashboard"
version = "0.1.0"
description = "AttendIQ parent report dashboard API"
authors = [
    {name = "Vivek",email = "viveks@sighbear.tech"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
